--- a/style.css
+++ b/style.css
@@ -18,10 +18,14 @@ h5 {
 }
 
 .card {
-    border: none;
+    border: solid black 2px;
     margin-bottom: 1rem;
 }
 
+.card:hover{
+  box-shadow: 5px 5px 19px 2px #000000;
+  transition: 0.3s ease ;
+}
 
 footer {
     padding-top: 3rem;
@@ -72,7 +76,11 @@ footer {
   color: white;
  }
 
- a:hover {
+ a{
+  text-decoration: none;
+ }
+
+ .nav-link:hover {
   background-color: rgb(255, 255, 255);
   border-radius: 5%;
  }
