--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
     padding: 0;
     font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     cursor: url("http://www.rw-designer.com/cursor-extern.php?id=93624%27"), pointer;
+    
   }
 
   body{
@@ -15,6 +16,11 @@ h5 {
     text-transform: uppercase;
     text-align: center;
     font-weight: 600; 
+}
+
+h1{
+  margin-top: 10px;
+
 }
 
 .card {
@@ -100,4 +106,29 @@ footer {
 
 .menu {
   background-color: black;
+}
+
+.total {
+  display: grid;
+  justify-content: center
+}
+
+
+
+td {
+  text-align: center;
+}
+
+th{
+  text-align: center;
+}
+
+.btn-sm {
+  border: solid black 1px;
+}
+
+img{
+  height: 400px;
+  width: 400px;
+  border-bottom: solid 2px black;
 }
